--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -12,6 +12,7 @@
         android:weightSum="1"
         tools:context="com.admin.gitframeapacas.FeedHomeFragment">
 
+
         <TextView
             android:id="@+id/txtLocation"
             android:layout_width="match_parent"
@@ -43,7 +44,7 @@
             android:textStyle="normal" />
 
         <pl.pawelkleczkowski.customgauge.CustomGauge
-            android:id="@+id/gauge"
+            android:id="@+id/gaugeMaster"
             android:layout_width="200dp"
             android:layout_height="200dp"
             android:layout_alignParentBottom="true"
@@ -73,13 +74,19 @@
             app:gaugeSweepAngle="180" />
 
         <TextView
-            android:id="@+id/txt2"
+            android:id="@+id/txtAQI"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:text="AQI = 36"
             android:textSize="15dp" />
 
+        <Button
+            android:id="@+id/btnRandom"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:text="Random Gas" />
 
         <LinearLayout
             android:layout_width="wrap_content"
@@ -89,7 +96,7 @@
 
 
             <pl.pawelkleczkowski.customgauge.CustomGauge
-                android:id="@+id/g_pm2.5"
+                android:id="@+id/gPM25"
                 android:layout_width="147dp"
                 android:layout_height="148dp"
                 android:layout_centerHorizontal="true"
@@ -98,7 +105,7 @@
                 android:paddingTop="50dp"
                 app:gaugeEndValue="100"
                 app:gaugePointEndColor="#F44336"
-                app:gaugePointSize="20"
+                app:gaugePointSize="10"
                 app:gaugePointStartColor="#8BC34A"
                 app:gaugeStartAngle="220"
                 app:gaugeStartValue="100"
@@ -111,7 +118,7 @@
 
 
             <pl.pawelkleczkowski.customgauge.CustomGauge
-                android:id="@+id/g_co"
+                android:id="@+id/gCO"
                 android:layout_width="147dp"
                 android:layout_height="148dp"
                 android:layout_centerHorizontal="true"
@@ -132,7 +139,7 @@
                 tools:layout_editor_absoluteY="16dp" />
 
             <pl.pawelkleczkowski.customgauge.CustomGauge
-                android:id="@+id/g_ho2"
+                android:id="@+id/gHO2"
                 android:layout_width="147dp"
                 android:layout_height="148dp"
                 android:layout_centerHorizontal="true"
@@ -153,7 +160,7 @@
                 tools:layout_editor_absoluteY="16dp" />
 
             <pl.pawelkleczkowski.customgauge.CustomGauge
-                android:id="@+id/g_so2"
+                android:id="@+id/gSO2"
                 android:layout_width="147dp"
                 android:layout_height="148dp"
                 android:layout_centerHorizontal="true"
@@ -182,6 +189,7 @@
             android:orientation="horizontal">
 
             <TextView
+                android:id="@+id/txtPM25"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
@@ -190,6 +198,7 @@
                 android:textSize="20dp" />
 
             <TextView
+                android:id="@+id/txtCO"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
@@ -198,17 +207,20 @@
                 android:textSize="20dp" />
 
             <TextView
+                android:id="@+id/txtH2O"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:gravity="center"
                 android:layout_weight="1"
+                android:gravity="center"
                 android:text="20"
                 android:textSize="20dp" />
+
             <TextView
+                android:id="@+id/txtSO2"
                 android:layout_width="wrap_content"
-                android:gravity="center"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
+                android:gravity="center"
                 android:text="20"
                 android:textSize="20dp" />
         </LinearLayout>
