--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -1,9 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent">
 
-    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
+    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
@@ -15,33 +18,43 @@
 
         <TextView
             android:id="@+id/txtLocation"
-            android:layout_width="match_parent"
+            android:layout_width="352dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="15dp"
             android:gravity="center"
             android:text="Current location"
             android:textSize="20dp"
-            android:textStyle="bold" />
+            android:textStyle="bold"
+            tools:layout_editor_absoluteX="16dp"
+            android:layout_marginTop="24dp"
+            app:layout_constraintTop_toTopOf="parent" />
+
+
 
         <TextView
             android:id="@+id/txtDataBy"
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
             android:gravity="center"
             android:text="Data collected by: Myself"
             android:textSize="17dp"
-            android:textStyle="normal" />
+            android:textStyle="normal"
+            android:layout_marginTop="8dp"
+            app:layout_constraintTop_toBottomOf="@+id/txtLocation"
+            app:layout_constraintRight_toRightOf="@+id/txtLocation"
+            app:layout_constraintLeft_toLeftOf="@+id/txtLocation" />
 
         <TextView
             android:id="@+id/txtStatus_sensor"
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
             android:gravity="center"
             android:text="Sensor: Active"
             android:textSize="17dp"
-            android:textStyle="normal" />
+            android:textStyle="normal"
+            android:layout_marginTop="8dp"
+            app:layout_constraintTop_toBottomOf="@+id/txtDataBy"
+            app:layout_constraintRight_toRightOf="@+id/txtDataBy"
+            app:layout_constraintLeft_toLeftOf="@+id/txtDataBy" />
 
         <pl.pawelkleczkowski.customgauge.CustomGauge
             android:id="@+id/gaugeMaster"
@@ -51,8 +64,6 @@
             android:layout_centerHorizontal="true"
             android:layout_centerVertical="true"
             android:layout_gravity="center"
-            android:layout_marginBottom="-80dp"
-            android:layout_marginTop="30dp"
             android:paddingBottom="10dp"
             android:paddingLeft="10dp"
             android:paddingRight="10dp"
@@ -60,18 +71,21 @@
             app:gaugeDividerColor="#ffeb3b"
             app:gaugeDividerDrawFirst="false"
             app:gaugeDividerDrawLast="true"
-            app:gaugeDividerSize="1"
             app:gaugeDividerStep="10"
             app:gaugeEndValue="100"
             app:gaugePointEndColor="#e51c23"
-            app:gaugePointSize="40"
+            app:gaugePointSize="0"
             app:gaugePointStartColor="#259b24"
             app:gaugeStartAngle="180"
             app:gaugeStartValue="0"
             app:gaugeStrokeCap="BUTT"
             app:gaugeStrokeColor="#bdbdbd"
             app:gaugeStrokeWidth="20dp"
-            app:gaugeSweepAngle="180" />
+            app:gaugeSweepAngle="180"
+            android:layout_marginTop="16dp"
+            app:layout_constraintTop_toBottomOf="@+id/txtStatus_sensor"
+            app:layout_constraintLeft_toLeftOf="@+id/txtStatus_sensor"
+            app:layout_constraintRight_toRightOf="@+id/txtStatus_sensor" />
 
         <TextView
             android:id="@+id/txtAQI"
@@ -79,114 +93,111 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:text="AQI = 36"
-            android:textSize="15dp" />
+            android:textSize="15dp"
+            app:layout_constraintTop_toTopOf="@+id/gaugeMaster"
+            app:layout_constraintLeft_toLeftOf="@+id/txtStatus_sensor"
+            app:layout_constraintRight_toRightOf="@+id/txtStatus_sensor"
+            android:layout_marginTop="64dp" />
 
         <Button
             android:id="@+id/btnRandom"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:text="Random Gas" />
-
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
-            android:orientation="horizontal">
+            android:text="Random Gas"
+            android:layout_marginTop="24dp"
+            app:layout_constraintTop_toBottomOf="@+id/txtAQI"
+            app:layout_constraintLeft_toLeftOf="@+id/txtStatus_sensor"
+            app:layout_constraintRight_toRightOf="@+id/txtStatus_sensor" />
 
 
             <pl.pawelkleczkowski.customgauge.CustomGauge
                 android:id="@+id/gPM25"
                 android:layout_width="147dp"
                 android:layout_height="148dp"
-                android:layout_centerHorizontal="true"
-                android:layout_weight="1"
-                android:paddingBottom="0dp"
                 android:paddingTop="50dp"
                 app:gaugeEndValue="100"
                 app:gaugePointEndColor="#F44336"
-                app:gaugePointSize="10"
+                app:gaugePointSize="0"
                 app:gaugePointStartColor="#8BC34A"
                 app:gaugeStartAngle="220"
-                app:gaugeStartValue="100"
+                app:gaugeStartValue="0"
                 app:gaugeStrokeCap="ROUND"
                 app:gaugeStrokeColor="#B2EBF2"
                 app:gaugeStrokeWidth="10dp"
                 app:gaugeSweepAngle="100"
-                tools:layout_editor_absoluteX="4dp"
-                tools:layout_editor_absoluteY="16dp" />
+                android:layout_marginTop="32dp"
+                app:layout_constraintTop_toBottomOf="@+id/btnRandom"
+                android:layout_marginStart="32dp"
+                app:layout_constraintLeft_toLeftOf="parent" />
 
 
             <pl.pawelkleczkowski.customgauge.CustomGauge
                 android:id="@+id/gCO"
                 android:layout_width="147dp"
                 android:layout_height="148dp"
-                android:layout_centerHorizontal="true"
-                android:layout_weight="1"
+
+
                 android:paddingBottom="00dp"
                 android:paddingTop="50dp"
                 app:gaugeEndValue="100"
                 app:gaugePointEndColor="#F44336"
-                app:gaugePointSize="15"
+                app:gaugePointSize="0"
                 app:gaugePointStartColor="#8BC34A"
                 app:gaugeStartAngle="220"
-                app:gaugeStartValue="100"
+                app:gaugeStartValue="0"
                 app:gaugeStrokeCap="ROUND"
                 app:gaugeStrokeColor="#B2EBF2"
                 app:gaugeStrokeWidth="10dp"
                 app:gaugeSweepAngle="100"
-                tools:layout_editor_absoluteX="4dp"
-                tools:layout_editor_absoluteY="16dp" />
+                app:layout_constraintLeft_toRightOf="@+id/gPM25"
+                app:layout_constraintTop_toTopOf="@+id/gPM25"
+                android:layout_marginStart="8dp"
+                android:layout_marginEnd="32dp"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintHorizontal_bias="0.25" />
 
-            <pl.pawelkleczkowski.customgauge.CustomGauge
-                android:id="@+id/gHO2"
-                android:layout_width="147dp"
-                android:layout_height="148dp"
-                android:layout_centerHorizontal="true"
-                android:layout_weight="1"
-                android:paddingBottom="0dp"
-                android:paddingTop="50dp"
-                app:gaugeEndValue="100"
-                app:gaugePointEndColor="#F44336"
-                app:gaugePointSize="15"
-                app:gaugePointStartColor="#8BC34A"
-                app:gaugeStartAngle="220"
-                app:gaugeStartValue="100"
-                app:gaugeStrokeCap="ROUND"
-                app:gaugeStrokeColor="#B2EBF2"
-                app:gaugeStrokeWidth="10dp"
-                app:gaugeSweepAngle="100"
-                tools:layout_editor_absoluteX="4dp"
-                tools:layout_editor_absoluteY="16dp" />
+        <pl.pawelkleczkowski.customgauge.CustomGauge
+            android:id="@+id/gHO2"
+            android:layout_width="147dp"
+            android:layout_height="148dp"
 
-            <pl.pawelkleczkowski.customgauge.CustomGauge
+            android:paddingBottom="0dp"
+            android:paddingTop="50dp"
+            app:gaugeEndValue="100"
+            app:gaugePointEndColor="#F44336"
+            app:gaugePointSize="0"
+            app:gaugePointStartColor="#8BC34A"
+            app:gaugeStartAngle="220"
+            app:gaugeStartValue="0"
+            app:gaugeStrokeCap="ROUND"
+            app:gaugeStrokeColor="#B2EBF2"
+            app:gaugeStrokeWidth="10dp"
+            app:gaugeSweepAngle="100"
+            app:layout_constraintTop_toBottomOf="@+id/gPM25"
+            app:layout_constraintLeft_toLeftOf="@+id/gPM25"
+            android:layout_marginTop="8dp" />
+
+        <pl.pawelkleczkowski.customgauge.CustomGauge
                 android:id="@+id/gSO2"
                 android:layout_width="147dp"
                 android:layout_height="148dp"
-                android:layout_centerHorizontal="true"
-                android:layout_weight="1"
                 android:paddingBottom="00dp"
                 android:paddingTop="50dp"
                 app:gaugeEndValue="100"
                 app:gaugePointEndColor="#F44336"
-                app:gaugePointSize="15"
+                app:gaugePointSize="0"
                 app:gaugePointStartColor="#8BC34A"
                 app:gaugeStartAngle="220"
-                app:gaugeStartValue="100"
+                app:gaugeStartValue="0"
                 app:gaugeStrokeCap="ROUND"
                 app:gaugeStrokeColor="#B2EBF2"
                 app:gaugeStrokeWidth="10dp"
                 app:gaugeSweepAngle="100"
-                tools:layout_editor_absoluteX="4dp"
-                tools:layout_editor_absoluteY="16dp" />
+            app:layout_constraintTop_toTopOf="@+id/gHO2"
+            app:layout_constraintLeft_toLeftOf="@+id/gCO" />
 
-        </LinearLayout>
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-
-            android:orientation="horizontal">
 
             <TextView
                 android:id="@+id/txtPM25"
@@ -195,7 +206,12 @@
                 android:layout_weight="1"
                 android:gravity="center"
                 android:text="20"
-                android:textSize="20dp" />
+                android:textSize="20dp"
+                app:layout_constraintTop_toTopOf="@+id/gPM25"
+                app:layout_constraintLeft_toLeftOf="@+id/gPM25"
+                app:layout_constraintRight_toLeftOf="@+id/gCO"
+                android:layout_marginEnd="8dp"
+                android:layout_marginTop="75dp" />
 
             <TextView
                 android:id="@+id/txtCO"
@@ -204,7 +220,10 @@
                 android:layout_weight="1"
                 android:gravity="center"
                 android:text="20"
-                android:textSize="20dp" />
+                android:textSize="20dp"
+                app:layout_constraintLeft_toLeftOf="@+id/gCO"
+                app:layout_constraintRight_toRightOf="@+id/gCO"
+                app:layout_constraintTop_toTopOf="@+id/txtPM25" />
 
             <TextView
                 android:id="@+id/txtH2O"
@@ -213,7 +232,11 @@
                 android:layout_weight="1"
                 android:gravity="center"
                 android:text="20"
-                android:textSize="20dp" />
+                android:textSize="20dp"
+                app:layout_constraintTop_toBottomOf="@+id/gPM25"
+                app:layout_constraintLeft_toLeftOf="@+id/gHO2"
+                app:layout_constraintRight_toRightOf="@+id/gHO2"
+                android:layout_marginTop="75dp" />
 
             <TextView
                 android:id="@+id/txtSO2"
@@ -222,36 +245,34 @@
                 android:layout_weight="1"
                 android:gravity="center"
                 android:text="20"
-                android:textSize="20dp" />
-        </LinearLayout>
+                android:textSize="20dp"
+                app:layout_constraintTop_toTopOf="@+id/txtH2O"
+                app:layout_constraintLeft_toLeftOf="@+id/gSO2"
+                app:layout_constraintRight_toRightOf="@+id/gSO2" />
+
 
 
         <View
             android:layout_width="368dp"
             android:layout_height="1dp"
-            android:layout_marginTop="16dp"
             android:background="@android:color/darker_gray"
-            app:layout_constraintTop_toBottomOf="@+id/img_recom"
-            tools:layout_editor_absoluteX="8dp" />
+            app:layout_constraintTop_toBottomOf="@+id/gHO2"
+            app:layout_constraintRight_toRightOf="@+id/gSO2"
+            app:layout_constraintLeft_toLeftOf="@+id/gHO2"
+            />
 
         <TextView
             android:id="@+id/txt3"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:layout_marginTop="15dp"
             android:text="คุณภาพอากาศ"
             android:textSize="20dp"
-            android:textStyle="bold" />
-
-        <android.support.v7.widget.RecyclerView
-            android:id="@+id/recyclerView_recom"
-
-            android:layout_width="match_parent"
-            android:layout_height="453dp"
-            tools:listitem="@layout/item_recommend">
-
-        </android.support.v7.widget.RecyclerView>
+            android:textStyle="bold"
+            android:layout_marginTop="8dp"
+            app:layout_constraintTop_toBottomOf="@+id/gHO2"
+            app:layout_constraintRight_toRightOf="@+id/gSO2"
+            app:layout_constraintLeft_toLeftOf="@+id/gHO2" />
 
 
         <TextView
@@ -260,6 +281,27 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:text="ทดสอบ"
-            android:textSize="20dp" />
-    </LinearLayout>
+            android:textSize="20dp"
+            app:layout_constraintTop_toBottomOf="@+id/recyclerView_recom"
+            app:layout_constraintRight_toRightOf="@+id/recyclerView_recom"
+            app:layout_constraintLeft_toLeftOf="@+id/recyclerView_recom"
+            android:layout_marginTop="24dp" />
+
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/recyclerView_recom"
+
+            android:layout_width="0dp"
+            android:layout_height="453dp"
+            tools:listitem="@layout/item_recommend"
+            android:layout_marginTop="8dp"
+            app:layout_constraintTop_toBottomOf="@+id/txt3"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            >
+
+        </android.support.v7.widget.RecyclerView>
+
+
+
+    </android.support.constraint.ConstraintLayout>
 </android.support.v4.widget.NestedScrollView>
