--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -93,7 +93,9 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:text="AQI = 36"
-            android:textSize="15dp"
+            android:textSize="20dp"
+            android:textColor="@color/md_red_400"
+            android:textStyle="bold"
             app:layout_constraintTop_toTopOf="@+id/gaugeMaster"
             app:layout_constraintLeft_toLeftOf="@+id/txtStatus_sensor"
             app:layout_constraintRight_toRightOf="@+id/txtStatus_sensor"
@@ -206,7 +208,7 @@
                 android:layout_weight="1"
                 android:gravity="center"
                 android:text="20"
-                android:textSize="20dp"
+                android:textSize="16dp"
                 app:layout_constraintTop_toTopOf="@+id/gPM25"
                 app:layout_constraintLeft_toLeftOf="@+id/gPM25"
                 app:layout_constraintRight_toLeftOf="@+id/gCO"
@@ -220,7 +222,7 @@
                 android:layout_weight="1"
                 android:gravity="center"
                 android:text="20"
-                android:textSize="20dp"
+                android:textSize="16dp"
                 app:layout_constraintLeft_toLeftOf="@+id/gCO"
                 app:layout_constraintRight_toRightOf="@+id/gCO"
                 app:layout_constraintTop_toTopOf="@+id/txtPM25" />
@@ -232,7 +234,7 @@
                 android:layout_weight="1"
                 android:gravity="center"
                 android:text="20"
-                android:textSize="20dp"
+                android:textSize="16dp"
                 app:layout_constraintTop_toBottomOf="@+id/gPM25"
                 app:layout_constraintLeft_toLeftOf="@+id/gHO2"
                 app:layout_constraintRight_toRightOf="@+id/gHO2"
@@ -245,7 +247,7 @@
                 android:layout_weight="1"
                 android:gravity="center"
                 android:text="20"
-                android:textSize="20dp"
+                android:textSize="16dp"
                 app:layout_constraintTop_toTopOf="@+id/txtH2O"
                 app:layout_constraintLeft_toLeftOf="@+id/gSO2"
                 app:layout_constraintRight_toRightOf="@+id/gSO2" />
