--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -208,6 +208,7 @@
                 android:layout_weight="1"
                 android:gravity="center"
                 android:text="20"
+                android:textColor="@color/md_red_300"
                 android:textSize="16dp"
                 app:layout_constraintTop_toTopOf="@+id/gPM25"
                 app:layout_constraintLeft_toLeftOf="@+id/gPM25"
@@ -222,6 +223,7 @@
                 android:layout_weight="1"
                 android:gravity="center"
                 android:text="20"
+                android:textColor="@color/md_red_300"
                 android:textSize="16dp"
                 app:layout_constraintLeft_toLeftOf="@+id/gCO"
                 app:layout_constraintRight_toRightOf="@+id/gCO"
@@ -235,6 +237,7 @@
                 android:gravity="center"
                 android:text="20"
                 android:textSize="16dp"
+                android:textColor="@color/md_red_300"
                 app:layout_constraintTop_toBottomOf="@+id/gPM25"
                 app:layout_constraintLeft_toLeftOf="@+id/gHO2"
                 app:layout_constraintRight_toRightOf="@+id/gHO2"
@@ -248,6 +251,7 @@
                 android:gravity="center"
                 android:text="20"
                 android:textSize="16dp"
+                android:textColor="@color/md_red_300"
                 app:layout_constraintTop_toTopOf="@+id/txtH2O"
                 app:layout_constraintLeft_toLeftOf="@+id/gSO2"
                 app:layout_constraintRight_toRightOf="@+id/gSO2" />
