--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -14,8 +14,8 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
-    <android.support.design.widget.NavigationView
-        android:id="@+id/nav_view"
+       <android.support.design.widget.NavigationView
+        android:id="@+id/nav_view2"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_gravity="start"
@@ -23,7 +23,6 @@
         app:headerLayout="@layout/nav_header"
         app:menu="@menu/menu_drawer"
         app:theme="@style/AlertDialog.AppCompat" />
-
 
 </android.support.v4.widget.DrawerLayout>
 
